--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,17 +1,15 @@
 * {
     border: none;
-    border-radius: 10px;
     /* `otf-font-awesome` is required to be installed for icons */
     font-family: Roboto, Helvetica, Arial, sans-serif;
     font-size: 14px;
     min-height: 0;
-    padding: 2px 5px;
+    padding: 1px 5px;
 }
 
 window#waybar {
-    /* background-color: rgba(43, 48, 59, 0.6); */
+    background-color: rgba(0, 0, 0, 0.5);
     /* border-bottom: 3px solid rgba(100, 114, 125, 0.5); */
-    border-radius: 10px;
     color: #ffffff;
     background: transparent;
     /* padding: 15px; */
@@ -33,16 +31,13 @@ window#waybar.solo {
 */
 
 window#waybar.termite {
-    background-color: #3F3F3F;
 }
 
 window#waybar.chromium {
-    background-color: #000000;
     border: none;
 }
 
 #workspaces{
-    background-color: #2a2e38;
     padding: 0px 0;
 }
 
@@ -50,29 +45,21 @@ window#waybar.chromium {
     padding: 3px 10px;
     background-color: transparent;
     color: #ffffff;
-    /* Use box-shadow instead of border so the text isn't offset */
-    box-shadow: inset 0 -3px transparent;
 }
 
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
 #workspaces button.focused {
-    /* box-shadow: 2px 2px 6px 1px black; */
-    color: #2a2e38;
-    background-color: #51afef;
+    padding-bottom: 0px;
+    border-bottom: 3px solid rgba(255, 255, 255, 0.8);
 }
 
 #workspaces button.urgent {
-    color: #2a2e38;
-    background-color: #7bc275;
 }
 
 #workspaces button:hover {
-	background-color: #5cEfFF;
-	color: #2a2e38;
 }
 
 #mode {
-    background-color: #64727D;
     border-bottom: 3px solid #ffffff;
 }
 
@@ -96,8 +83,7 @@ window#waybar.chromium {
 #custom-bluetoothapplet
 {
     padding: 0 12px;
-    margin: 0 4px;
-    color: #ffffff;
+    /* margin: 0 4px; */
 }
 
 #window,
@@ -116,29 +102,21 @@ window#waybar.chromium {
 }
 
 #clock {
-    background-color: #003333;
+    margin-top: 3px;
 }
 
 #battery {
-    background-color: #ffffff;
-    color: #000000;
 }
 
 #battery.charging, #battery.plugged {
-    color: #ffffff;
-    background-color: #26A65B;
 }
 
 @keyframes blink {
     to {
-        background-color: #ffffff;
-        color: #000000;
     }
 }
 
 #battery.critical:not(.charging) {
-    background-color: #f53c3c;
-    color: #ffffff;
     animation-name: blink;
     animation-duration: 0.5s;
     animation-timing-function: linear;
@@ -147,93 +125,74 @@ window#waybar.chromium {
 }
 
 label:focus {
-    background-color: #000000;
 }
 
 #cpu {
-    background-color: #2ecc71;
-    color: #000000;
 }
 
 #memory {
-    background-color: #9b59b6;
 }
 
 #disk {
-    background-color: #964B00;
 }
 
 #backlight {
-    background-color: #90b1b1;
 }
 
 #network {
-    background-color: #2980b9;
 }
 
 #network.disconnected {
-    background-color: #f53c3c;
 }
 
 #pulseaudio {
-    background-color: #ee9500;
-    color: #000000;
+    /* margin-top: 2px; */
+    font-size: 18px;
 }
 
 #pulseaudio.muted {
-    background-color: #90b1b1;
-    color: #2a5c45;
 }
 
 #custom-media {
-    background-color: #66cc99;
-    color: #2a5c45;
+    margin-top: 3px;
     min-width: 100px;
 }
 
 #custom-media.custom-spotify {
-    background-color: #66cc99;
 }
 
 #custom-media.custom-vlc {
-    background-color: #dd8b00;
 }
 
 
 #custom-wireguard{
+    margin-top: 3px;
     /* font-size: 1rem; */
-    padding: 0 10px;
-    background-color: #7D1313;
+    /* padding: 0 10px; */
 }
 
 #custom-powerapplet{
-    border-radius: 10px;
-    background: #f53c3c;
-    padding: 0 15px;
+    /* border-radius: 10px; */
+    /* padding: 0 15px; */
     /* margin: 0 5px; */
 }
 
 #custom-wireguard.active{
-    background-color: #2980b9;
 }
 
 #custom-bluetoothapplet {
-    background-color: #ee9500;
-    color: black;
+    margin-top: 2px;
     /* font-size: 1rem; */
-    padding: 0 15px;
+    /* padding: 0 15px; */
 }
 
 #temperature {
-    background-color: #f0932b;
 }
 
 #temperature.critical {
-    background-color: #eb4d4b;
 }
 
 #tray {
-    /* background-color: rgba(43, 48, 59, 0.1); */
 }
 
 #tray > .passive {
@@ -242,53 +201,41 @@ label:focus {
 
 #tray > .needs-attention {
     -gtk-icon-effect: highlight;
-    background-color: #eb4d4b;
 }
 
 #idle_inhibitor {
-    background-color: #2d3436;
+    /* margin-bottom: 1px; */
 }
 
 #idle_inhibitor.activated {
-    background-color: #ecf0f1;
-    color: #2d3436;
 }
 
 #mpd {
-    background-color: #66cc99;
-    color: #2a5c45;
 }
 
 #mpd.disconnected {
-    background-color: #f53c3c;
 }
 
 #mpd.stopped {
-    background-color: #90b1b1;
 }
 
 #mpd.paused {
-    background-color: #51a37a;
 }
 
 #language {
-    background: @theme_bg_color;
-    /* color: #740864; */
     min-width: 16px;
+    margin-top: 3px;
 }
 
 #keyboard-state {
-    background: #97e1ad;
-    color: #000000;
-    padding: 0 0px;
-    margin: 0 5px;
-    min-width: 16px;
+    /* padding: 0 0px; */
+    /* margin: 0 5px; */
+    /* min-width: 16px; */
 }
 
 #keyboard-state > label {
-    padding: 0 5px;
+    /* padding: 0 5px; */
 }
 
 #keyboard-state > label.locked {
-    background: rgba(0, 0, 0, 0.2);
 }
