--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -8,10 +8,9 @@
 }
 
 window#waybar {
-    background-color: rgba(0, 0, 0, 0.5);
     /* border-bottom: 3px solid rgba(100, 114, 125, 0.5); */
     color: #ffffff;
-    background: transparent;
+    background-color: rgba(0, 0, 0, 0.6);
     /* padding: 15px; */
     transition-property: background-color;
     transition-duration: .5s;
@@ -54,9 +53,12 @@ window#waybar.chromium {
 }
 
 #workspaces button.urgent {
+    color: red;
+    border-bottom: 3px solid rgba(255, 0, 0, 0.4);
 }
 
 #workspaces button:hover {
+    border-bottom: 3px solid rgba(255, 255, 255, 0.2);
 }
 
 #mode {
