--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -38,27 +38,31 @@ window#waybar.chromium {
 
 #workspaces{
     padding: 0px 0;
+    transition: none;
 }
 
 #workspaces button {
-    padding: 3px 10px;
+    padding: 2px 10px;
     background-color: transparent;
+    transition: none;
     color: #ffffff;
 }
 
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
 #workspaces button.focused {
     padding-bottom: 0px;
-    border-bottom: 3px solid rgba(255, 255, 255, 0.8);
+    border-bottom: 2px solid rgba(255, 255, 255, 0.8);
 }
 
 #workspaces button.urgent {
+    padding-bottom: 0px;
     color: red;
-    border-bottom: 3px solid rgba(255, 0, 0, 0.4);
+    border-bottom: 2px solid rgba(255, 0, 0, 0.4);
 }
 
 #workspaces button:hover {
-    border-bottom: 3px solid rgba(255, 255, 255, 0.2);
+    padding-bottom: 0px;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.2);
 }
 
 #mode {
