--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -16,6 +16,18 @@ window#waybar {
     transition-duration: .5s;
 }
 
+tooltip {
+     /* border-radius: 4px; */
+     /* background-color: #bd93f9; */
+    padding:0;
+    margin:0;
+}
+
+tooltip label {
+    padding:0;
+    margin:0;
+}
+
 window#waybar.hidden {
     opacity: 0.2;
 }
