Update 15:58 Fri, 01 Oct

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -164,8 +164,8 @@ label:focus {
 }
 
 #pulseaudio {
-    /* margin-top: 2px; */
-    font-size: 18px;
+    margin-top: 3px;
+    font-size: 15px;
 }
 
 #pulseaudio.muted {
