--- a/.config/taffybar/taffybar.css
+++ b/.config/taffybar/taffybar.css
@@ -7,8 +7,8 @@
 
 .taffy-window * {
 	font-family: "Noto Sans", sans-serif;
-	font-size: 10pt;
-	font-weight: bold;
+	font-size: 12pt;
+	font-weight: 800;
 	color: @font-color;
 	text-shadow: 1px 1px @font-shadow-color;
 }
@@ -21,6 +21,13 @@
 	padding: 3px;
 	margin: 4px;
 	border-radius: 4px;
+}
+/* HACK */
+/* FIX in Context.hs centerBox expansion to all available space */
+.center-box{
+
+	padding-left: 450px;
+	padding-right: 450px;
 }
 
 .contents {
